# clutter-sharp

./: .gitignore  Makefile.am  clutter-sharp.sln  configure.ac  readme.md
samples/: BasicActor.cs  Canvas.cs  ClutterGtkWindowTest.cs  Constraints.cs  ImageContent.cs  Makefile.am  PanAction.cs  RoundedRectangle.cs  ScrollActor.cs  VideoSink.cs
sources/: Clutter-1.0-merged.metadata  Makefile.am  clutter-sharp-api.raw  clutter-sharp.metadata  clutter-sharp.snk
sources/custom/: Actor.cs  Application.cs  Color.cs  Event.cs  Global.cs  PaintNode.cs  PipelineNode.cs  Point.cs  Rect.cs  Size.cs  Texture.cs  Vertex.cs
sources/glue/: Makefile.am
